# japan_stock_adviser

./: .gitignore  GEMINI.md  README.md  pyproject.toml
.gemini/: settings.json
src/japan_stock_adviser/: __init__.py  kabutan.py  nikkei.py  yahoo_finance_api.py
