[project]
name = "japan-stock-adviser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chardet>=5.2.0",
    "yfinance>=1.0",
]

[project.scripts]
stock_data = "japan_stock_adviser:yahoo_finance_api.stock_data"
owner_benefit = "japan_stock_adviser:kabutan.owner_benefit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
